<resources>
    <string name="app_name">Poly</string>
    <string name="input_otp_code">Masukan kode verifikasi yang telah dikirimkan melalui SMS ke nomor %s</string>
    <string name="login">Login</string>
    <string name="the_code_you_entered_is_incorrect">Koda yang kamu masukan salah</string>
    <string name="resend_otp_code">Kirim Ulang</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>
    <string name="register">Daftar</string>
    <string name="code_not_send_timer">Belum menerima code ? kirim ulang dalam %s</string>
    <string name="agreement_register">Dengan mendaftar, kamu menyetujui Aturan Penggunaan dan Kebijakan Privasi</string>
    <string name="privacy_policy">Kebijakan Privasi</string>
    <string name="term_condition">Syarat Ketentuan</string>
    <string name="check_box_agreement">Dengan mendaftar kamu menyetujui</string>
    <string name="and">dan</string>
    <string name="us">kami</string>
    <string name="please_fill_all_field">Pastikan Semua Data Sudah Terisi</string>
    <string name="_male">MALE</string>
    <string name="_female">FEMALE</string>
    <string name="slider_title_one">Hallo, Selamat Datang di Poly</string>
    <string name="slider_title_two">Branding</string>
    <string name="slider_title_three">Komunitas</string>
    <string name="slider_description_one">Aplikasi digital sosial media yang memfasilitasi penggunanya untuk saling bersosial serta membagikan konten berupa foto, video, dan tulisan</string>
    <string name="slider_description_two">Platform Poly membantu memasarkan produk anda agar mudah dijangkau oleh masyarakat luas</string>
    <string name="slider_description_three">Menciptakan komunitas untuk sekedar memberi info atau memasarkan produk anda</string>
    <string name="slider_image">Slider Image</string>
    <string name="welcome">Selamat Datang</string>
    <string name="logo_poly">Logo Poly</string>
    <string name="phone_number">Nomor Handphone</string>
    <string name="password">Password</string>
    <string name="button_login">Button Login</string>
    <string name="not_have_account_register">Belum punya akun ? Daftar</string>
    <string name="name">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="upload_image">Upload Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="message">Message</string>
    <string name="business">Bisnis</string>
    <string name="job">Lowongan</string>
    <string name="profession">Profesi</string>
    <string name="collection">Koleksi</string>
    <string name="store">Toko</string>
    <string name="home">Home</string>
    <string name="share_your_moment">Bagikan momen kamu</string>
    <string name="user_profile">User Profile</string>
    <string name="menu_content_creative">Menu Content Creative</string>
    <string name="menu_video">Menu Video</string>
    <string name="menu_community">Menu Community</string>
    <string name="menu_ads">Menu Ads</string>
    <string name="see_all">Lihat Semua</string>
    <string name="community">Komunitas</string>
    <string name="for_you">Untuk Kamu</string>
    <string name="your_community">Komunitas kamu</string>
    <string name="create_community">Buat Komunitas</string>
    <string name="add_community">Add Community</string>
    <string name="community_name">Nama Komunitas</string>
    <string name="ex_community_name">Jogging, Hewan Peliharaan, Sepeda</string>
    <string name="description">Deskripsi</string>
    <string name="description_community">Berikan informasi selengkapnya tentang komunitas kamu agar tamu mengetahui apa saja yang bisa diharapkan.</string>
    <string name="add_description">Tambah Deskripsi</string>
    <string name="category_community">Kategori Komunitas</string>
    <string name="category_community_desc">Hewan, Social, Jual - beli</string>
    <string name="invite_friend">Ajak Teman</string>
    <string name="video">Video</string>
    <string name="add_video">Tambah Video</string>
    <string name="add_ads">Tambah Sponsor</string>
    <string name="ads">Iklan</string>
    <string name="add_my_ads">Buat Iklan Saya</string>
    <string name="title">Judul</string>
    <string name="location">Lokasi</string>
    <string name="category_ads">Kategori Iklan</string>
    <string name="adding_ads">Iklankan</string>
    <string name="add_link_web">Masukkan URL Website (https://…)</string>
    <string name="add_sponsor_ads">Buat Iklan Sponsor</string>
    <string name="add_content_creative_ads">Iklan Konten Kreatif</string>
    <string name="share_your_business_info">Bagikan info bisnis kamu</string>
    <string name="create_product">Tambah Produk</string>
    <string name="sell">Jual</string>
    <string name="name_product">Nama Produk</string>
    <string name="condition">Kondisi</string>
    <string name="price">Harga</string>
    <string name="category">Kategori</string>
    <string name="back_button">Back Button</string>
    <string name="canceled">Dibatalkan</string>
    <string name="create_job">Tambah Lowongan</string>
    <string name="edit_job">Edit Lowongan</string>
    <string name="create_business">Tambah Bisnis</string>
    <string name="edit_business">Edit Bisnis</string>
    <string name="create_moment">Tambah Moment</string>
    <string name="edit_moment">Edit Moment</string>
    <string name="address">Alamat</string>
    <string name="error_upload_image">Error Upload Image : %s</string>
    <string name="store_success_created">Toko Berhasil Dibuat</string>
    <string name="store_success_edited">Toko Berhasil Diubah</string>
    <string name="job_success_added">Lowongan Berhasil Ditambahkan</string>
    <string name="job_success_edited">Lowongan Berhasil Diubah</string>
    <string name="job_success_deleted">Lowongan Berhasil Dihapus</string>
    <string name="business_success_added">Bisnis Berhasil Ditambahkan</string>
    <string name="business_success_edited">Bisnis Berhasil Diubah</string>
    <string name="business_success_deleted">Bisnis Berhasil Dihapus</string>
    <string name="add_data">Tambah Data</string>
    <string name="image_job">Image Job</string>
    <string name="edit">Edit</string>
    <string name="delete">Hapus</string>
    <string name="data_not_available">Data Tidak Tersedia</string>
    <string name="confirmation_delete_title">Hapus Data</string>
    <string name="confirmation_delete_description">Kamu yakin ingin menghapus ini ?</string>
    <string name="no">Tidak</string>
    <string name="yes">Iya</string>
    <string name="add_product">Tambah Product</string>
    <string name="profile">Profile</string>
    <string name="special_discount">Kejar Diskon Spesial</string>
    <string name="poly_bazar">Bazar Poly</string>
    <string name="poly_serbu">Serbu Poly</string>
    <string name="happy_shopping">Happy Shopping</string>
    <string name="create_store">Buka Toko</string>
    <string name="edit_store">Edit Toko</string>
    <string name="store_name">Nama Toko</string>
    <string name="store_not_found">Kamu Belum Memiliki Toko</string>
    <string name="store_not_found_description">Buka toko terlebih dahulu untuk melanjutkan</string>
    <string name="later">Nanti</string>
    <string name="add">Add</string>
    <string name="content_creative">Konten Kreatif</string>
    <string name="post">Posting</string>
    <string name="camera_or_video">Camera / Video</string>

    <!-- Toolbar Texts -->
    <string name="uwmediapicker_toolbar_title_image_library">Pilih Gambar</string>
    <string name="uwmediapicker_toolbar_title_video_library">Pilih Video</string>
    <string name="uwmediapicker_toolbar_title_image_and_video_library">Pilih Gambar / Video</string>
    <string name="uwmediapicker_toolbar_text_uw_media_picker_selected_media_count">%d/%d selected</string>
    <string name="uwmediapicker_toolbar_done">Pilih</string>

    <!-- Snackbar Messages -->
    <string name="uwmediapicker_snackbar_error_gallery_open_failed">Gallery gagal dibuka</string>
    <string name="uwmediapicker_snackbar_action_retry">Ulang</string>

    <!-- Toast Messages-->
    <string name="uwmediapicker_toast_error_media_bucket_open_failed">Album gagal dibuka</string>
    <string name="uwmediapicker_toast_error_media_select_failed">Media tidak bisa dipilih</string>
    <string name="uwmediapicker_toast_error_max_media_selected">Kamu hanya bisa memilih satu media</string>
    <string name="uwmediapicker_toast_error_some_media_select_failed">Beberapa media tidak bisa dipilih</string>

    <!-- Time Formats -->
    <string name="uwmediapicker_time_format_hour_min_sec">%02d:%02d:%02d</string>
    <string name="uwmediapicker_time_format_min_sec">%02d:%02d</string>

    <!-- Content Descriptions -->
    <string name="uwmediapicker_content_description_back_button">Back button</string>
    <string name="uwmediapicker_content_description_album_thumbnail">Album thumbnail</string>
    <string name="uwmediapicker_content_description_image_thumbnail">Image thumbnail</string>
    <string name="uwmediapicker_content_description_video_thumbnail">Video thumbnail</string>
    <string name="uwmediapicker_content_description_selected_icon">Selected icon</string>
    <string name="media">Media</string>
    <string name="see_all_comment">Lihat semua komentar</string>
    <string name="love_moment">Love Moment</string>
    <string name="comment_moment">Comment Moment</string>
    <string name="post_image">Post Image</string>
    <string name="more_files_count">+ %d</string>

</resources>