<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.auth.RegisterFragment">

    <ImageView
        android:id="@+id/img_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_large"
        android:layout_marginTop="@dimen/dimens_large"
        android:padding="@dimen/dimens_small"
        android:background="@drawable/bg_back_icon"
        android:src="@drawable/ic_baseline_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/dimens_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_button_back"
        app:layout_constraintTop_toBottomOf="@+id/img_button_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_medium"
                android:text="@string/register"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_medium"
                app:boxBackgroundColor="@color/blueIce"
                android:hint="@string/name"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextAppearance.MdcTypographyStyles.Body1"
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_medium"
                app:boxBackgroundColor="@color/blueIce"
                android:hint="@string/phone_number"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextAppearance.MdcTypographyStyles.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_medium"
                app:boxBackgroundColor="@color/blueIce"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextAppearance.MdcTypographyStyles.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:id="@+id/edt_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/dimens_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkbox_tc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toTopOf="@+id/btn_register"
                    app:layout_constraintStart_toStartOf="@+id/btn_register" />

                <TextView
                    android:id="@+id/tv_agreement"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement_register"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_medium"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/poppins"
                android:text="@string/register"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>